[package]
name = "spAnalyse"
version = "0.1.0"
authors = ["ashthespy <ashthespy@gmail.com>"]
# build = "build.rs"

[[bin]]
name = "spanalyse"
path = "src/main.rs"
doc = false

[dependencies]
tokio-core = "0.1.2"
serde_json = "0.9.6"
protobuf = "1.1"
futures = "0.1.8"
log = "0.4.0"
env_logger = "0.5.13"

[dependencies.librespot]
git = "https://github.com/ashthespy/librespot"
# path = "../librespot"
default-features = false
# features = ["alsa-backend"]
